[gd_scene load_steps=6 format=3 uid="uid://c0t0dbyifnbch"]

[ext_resource type="Script" uid="uid://diyc1b5jxllur" path="res://scripts/student.gd" id="1_4orpo"]
[ext_resource type="PackedScene" uid="uid://c61mb2p3x5d3x" path="res://scenes/interactable.tscn" id="2_txaf7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rtvyc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a44nb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ndy7l"]

[node name="student" type="Node3D"]
script = ExtResource("1_4orpo")

[node name="student" type="CharacterBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="student"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.88, 0)
mesh = SubResource("CapsuleMesh_rtvyc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="student"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.88, 0)
shape = SubResource("CapsuleShape3D_a44nb")

[node name="Interactable" parent="." instance=ExtResource("2_txaf7")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_ndy7l")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
